2002-07-30  Graeme Peterson  <gp@qnx.com>

	* configure.in: Add support for arm-*-nto target.
	* configure: Regenerate.
	
2002-07-30  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (struct literal_pool): Add fields to allow
	multiple literal pools to be maintained.
	(find_literal_pool): New function.
	(find_or_make_literal_pool): New function.
	(add_to_literal_pool): Use find_or_make_literal_pool.
        (arm_s_text, arm_s_data, arm_s_section): Remove - no longer
	needed.
	(s_ltorg): Use find_literal_pool.
	(arm_cleanup): Dump all literal pools.
        * doc/c-arm.texi: Document new behaviour of only dumping literal
	pools upon request.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_set_cpu): Use PPC_OPCODE_64 as the default
	rather than PPC_OPCODE_32 for powerpc64*.

2002-07-25  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.
	* po/fr.po: Updated French translation.

2002-07-25  Richard Sandiford  <rsandifo@redhat.com>

	* doc/c-mips.texi: Remove -mcpu.  Document -mabi.
	* configure.in (MIPS_CPU_STRING_DEFAULT): New configuration macro.
	(USE_E_MIPS_ABI_O32, MIPS_DEFAULT_64BIT): New configuration macros.
	* configure, config.in: Regenerate.
	* config/tc-mips.c (file_mips_abi): Rename to mips_abi.
	(mips_set_options): Remove "abi" field.
	(mips_opts): Update accordingly.  Replace all uses of mips_opts.abi
	with mips_abi.
	(mips_cpu): Remove.
	(mips_arch_string, mips_arch_info): New vars.
	(mips_tune_string, mips_tune_info): New vars.
	(ABI_NEEDS_32BIT_REGS, ABI_NEEDS_64BIT_REGS): New macros.
	(HAVE_32BIT_GPRS, HAVE_32BIT_FPRS): Don't check the ABI.
	(mips_isa_to_str, mips_cpu_to_str): Remove.
	(mips_ip): If the selected architecture is a generic ISA rather
	than a processor, only mention the ISA level in error messages.
	(OPTION_MCPU): Remove.
	(OPTION_FP64): New.
	(md_longopts): Add -mfp64, remove -mcpu.
	(mips_set_option_string): New fn.
	(md_parse_option): Make -mipsN update file_mips_isa rather than